fix vertical alignment of buttons - fixes #3034

--- a/static/sass/screen.sass
+++ b/static/sass/screen.sass
@@ -120,6 +120,7 @@ button
   padding: 0 1.5em 0 1em
   position: relative
   text-decoration: none
+  vertical-align: middle
   z-index: 999
 
   &:hover
